--- a/package.json
+++ b/package.json
@@ -1,19 +1,27 @@
 {
-  "name": "node_sync_proxy",
-  "version": "1.0.0",
-  "description": "syncronize web and server",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "ryan",
-  "license": "MIT",
-  "dependencies": {
-    "babel-core": "^6.21.0",
-    "babel-loader": "^6.2.10",
-    "babel-preset-es2015": "^6.18.0",
-    "eslint": "^3.13.0",
-    "eslint-loader": "^1.6.1",
-    "express": "^4.14.0"
-  }
+	"name": "node_sync_proxy",
+	"version": "1.0.0",
+	"description": "syncronize web and server",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"start": "cross-env NODE_ENV=production node ./build/main.js",
+		"clean": "rm -rf public/bundle.js",
+		"build": "babel server --out-dir build --presets=es2015 && webpack",
+		"dev": "cross-env NODE_ENV=development nodemon --exec babel-node --presets=es2015 ./server/app.js --watch server"
+	},
+	"author": "ryan",
+	"license": "MIT",
+	"dependencies": {
+		"express": "^4.14.0"
+	},
+	"devDependencies": {
+		"babel-core": "^6.21.0",
+		"babel-loader": "^6.2.10",
+		"babel-preset-es2015": "^6.18.0",
+		"webpack": "^1.13.1",
+		"webpack-dev-server": "^1.14.1",
+		"eslint": "^3.13.0",
+		"eslint-loader": "^1.6.1"
+	}
 }
