--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
 	"main": "index.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"start": "cross-env NODE_ENV=production node ./build/main.js",
+		"start": "cross-env NODE_ENV=prod pm2 start ./build/app.js --name 'proxy-server' ",
 		"clean": "rm -rf public/bundle.js",
 		"build": "babel server --out-dir build --presets=es2015 && webpack",
-		"dev": "cross-env NODE_ENV=development nodemon --exec babel-node --presets=es2015 ./server/app.js --watch server"
+		"dev": "cross-env NODE_ENV=dev nodemon --exec babel-node --presets=es2015 ./server/app.js --watch server"
 	},
 	"author": "ryan",
 	"license": "MIT",
